# caption-pipeline

./: .gitattributes  .gitignore  danbooru-tags.json  gelbooru_tags_2026-06-11.jsonl  pyproject.toml  tags_v0.9_13k.json
src/caption_pipeline/: __init__.py  cli.py
src/caption_pipeline/core/: __init__.py  context.py  help.py  pipeline.py  resource_manager.py  step.py
src/caption_pipeline/prompts/: __init__.py  filter.py  toriigate.py
src/caption_pipeline/steps/: __init__.py  debug.py  filter_danbooru.py  filter_overlap.py  fix_counts.py  fix_danbooru.py  fix_overlap.py  format_base.py  format_join.py  format_section.py  tag_generate.py  tag_manipulate.py  tag_natural_language.py  tag_natural_language_filter.py  tag_resolve.py  validate_characters.py
src/caption_pipeline/utils/: __init__.py  booru_characters.py  character_extractor.py  llama_server.py  logging_utils.py  model_manager.py  ollama_manager.py  tag_db.py  tokenizer.py
