[project]
name = "caption-pipeline"
version = "0.1.0"
description = "Modular image captioning pipeline for diffusion model training"
readme = "README.md"
authors = [
    {name = "Blong Yang", email = "yang.blongt@gmail.com"}
]
license = "MIT"
requires-python = ">=3.9"
dependencies = [
    "Pillow>=10.0.0",
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "dghs-imgutils>=0.19.0",
    "loguru>=0.7.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "tqdm>=4.68.3",
    "onnxruntime-gpu>=1.20.2",
    "python-magic>=0.4.27",
    "psutil>=7.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
caption-pipeline = "caption_pipeline.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Hatchling configuration
[tool.hatch.build.targets.wheel]
packages = ["src/caption_pipeline"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/cli.py",
    "/README.md",
    "/pyproject.toml",
]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = "test_*.py"
